mostly functional, still needs highlighting for desirable profession items

--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "blizzapi": "^2.3.2",
+    "mongoose": "^6.8.0",
     "next": "13.0.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "zustand": "^4.1.5"
   },
   "devDependencies": {
     "@types/node": "18.11.14",
