reworks guilds member filters, but still not fully done; adds notable consumable profession recipes and filter per character;

--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "lazy-peon",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
+  "author": "Vue @ Zuluhed-US",
+  "license": "ISC",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
